@@ -1,5 +1,6 @@
 Release ()
 ------------------------------------
+* Window组件新增beforeclose事件
 
 Release (2011-04-27)
 ------------------------------------
